Change socket to socketio